# debian_package_stats

./: README.md  package_statistics.py  pyproject.toml  tox.ini
src/debian_package_stats/: contents_stat_mgr.py  deb_dl_mgr.py
tests/: test_contents_stat_mgr.py  test_deb_dl_mgr.py
